--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Ahmed's Portfolio</title>
-    <script
-      id="react-dotenv"
-      src="https://ahmed-o.github.io/chakraportfolio//env.js"
-    ></script>
+    <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
